upgrade to java 11 - cleanup